ha_webserver/security_group_web.tf
resource "aws_security_group" "this" {
  name = "ec2-public-webserver-sg"
  description = "Allow ssh & http inbound traffic"
  vpc_id = var.vpc_id

  ingress {
    description = "TLS from VPC"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [
      "0.0.0.0/0"]
  }

  ingress {
    description = "http traffic"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = [
      "0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [
      "0.0.0.0/0"]
  }

  tags = {
    Application = var.application_name
  }
}
